# yuccalib

./: .gitignore  Readme.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
tests/: test_softmax.py
yuccalib/evaluation/: confusion_matrix.py  loggers.py  metrics.py  obj_metrics.py
yuccalib/image_processing/: cropping_and_padding.py  matrix_ops.py
yuccalib/image_processing/objects/: BoundingBox.py  filtering.py
yuccalib/image_processing/transforms/: BiasField.py  Blur.py  CopyImageToSeg.py  Crop.py  Gamma.py  Ghosting.py  Masking.py  Mirror.py  Noise.py  Ringing.py  SimulateLowres.py  Spatial.py  YuccaTransform.py  cropping_and_padding.py  formatting.py  sampling.py
yuccalib/loss_and_optim/loss_functions/: deep_supervision.py  hierarchical_losses.py  nnUNet_losses.py  unified_focal_loss.py
yuccalib/loss_and_optim/utils/: LossTree.py
yuccalib/network_architectures/blocks_and_layers/: conv_blocks.py  conv_layers.py  norm.py
yuccalib/network_architectures/networks/: DeepLabHeadV3Plus.py  MedNeXt.py  MultiResUNet.py  TinyUNet.py  UNet.py  UNetR.py  UXNet.py  YuccaNet.py  resnet.py
yuccalib/network_architectures/utils/: get_steps_for_sliding_window.py  model_memory_estimation.py
yuccalib/utils/: __init__.py  files_and_folders.py  kwargs.py  nib_utils.py  softmax.py  type_conversions.py
