[project]
name = "yuccalib"
version = "0.1"
authors = [
  { name="Sebastian LLambias", email="snl@di.ku.dk" },
]
description = "Everything you need to handle medical data like a true yucca plant."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy==1.23',
]

[project.optional-dependencies]
test = [
    'pytest==7.3',
]

[project.urls]
"Homepage" = "https://github.com/sllambias/yuccalib"
"Bug Tracker" = "https://github.com/sllambias/yuccalib/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"