[project]
name = "yuccalib"
version = "0.1"
authors = [
  { name="Sebastian LLambias", email="snl@di.ku.dk" },
]
description = "Everything you need to handle medical data like a true yucca plant."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy>=1.23',
    'batchgenerators>=0.25',
    'connected_components_3d',
    'einops'>=0.7.0,
    'monai>=1.3.0',
    'nibabel>=5.1.0',
    'Pillow>=10.1.0',
    'pytest>=7.4.3',
    'scipy>=1.11.3',
    'setuptools>=68.0.0',
    'scikit-image',
    'timm>=0.9.8',
]

[project.optional-dependencies]
test = [
    'pytest>=7.3',
    'flake8>=6.1.0',
    'black>=23.10.1',
]

[project.urls]
"Homepage" = "https://github.com/sllambias/yuccalib"
"Bug Tracker" = "https://github.com/sllambias/yuccalib/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"